log/build_2026-03-16_09-49-13/my_first_package/stderr.log
  File "/home/kyujin/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 15
    		self.teleport = self.create_client?(TeleportAbsolute, '/turtle1/teleport_absolute')
    		                                  ^
SyntaxError: invalid syntax

